AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_iBeam-smart.la
libmmgr_dal_iBeam-smart_la_SOURCES = iBeam-smart.cpp iBeam-smart.h \
   ../../MMDevice/MMDevice.h ../../MMDevice/DeviceBase.h
libmmgr_dal_iBeam-smart_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_iBeam-smart_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)
